<resources>
    <string name="app_name">VocabulaR</string>
    <string name="ru_en">ru-en</string>
    <string name="en_ru">en-ru</string>

    <string name="system_lang">en</string>
    <array name="langs">
        <item>English</item>
        <item>Russian</item>
    </array>

    <string name="success">Operation completed successfully</string>
    <string name="invalid_api_key">Invalid API key</string>
    <string name="blocked_api_key">Blocked API key</string>
    <string name="exceeded_daily_limit">Exceeded the daily limit on the amount of translated text</string>
    <string name="exceeded_max_text_size">Exceeded the maximum text size</string>
    <string name="text_format_error">The text cannot be translated</string>
    <string name="transation_direction_error">The specified translation direction is not supported</string>
    <string name="unknown_error">Unknown error</string>
    <string name="choose_a_direction">Choose a translation direction of dictionary</string>

    <string name="source_hint">Studied</string>
    <string name="target_hint">Native</string>
    <string name="internet_necessity">You must have an Internet connection</string>
    <string name="dictionary_num">Dictionary #</string>
    <string name="enter_name">Enter the name of the dictionary</string>
    <string name="busy_name">A dictionary with this name already exists</string>

</resources>
