<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/ic_launcher_background"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <EditText
        android:id="@+id/vocab_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:selectAllOnFocus="false"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"

        android:textAlignment="center"
        android:hint="@string/enter_name"
        android:singleLine="true" />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_direction"
        android:layout_below="@+id/vocab_name_edit_text"
        android:textAlignment="center"
        android:layout_marginTop="28dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="14dp"
        android:layout_height="match_parent"
        android:layout_below="@id/description">

        <TextView
            android:id="@+id/source_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/source_lang_spinner"
            android:text="@string/source_hint"
            android:layout_marginLeft="8dp"
            android:layout_above="@id/source_lang_spinner"/>

        <Spinner
            android:id="@+id/source_lang_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/arrow"
            android:layout_toLeftOf="@+id/arrow"
            />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/choose_a_direction"
            android:src="@drawable/ic_arrow"

            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:id="@+id/replay_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/internet_necessity"
            android:src="@drawable/ic_action_replay"
            android:visibility="invisible"

            android:layout_centerHorizontal="true"
            />
        <ProgressBar
            android:layout_centerHorizontal="true"
            android:id="@+id/download_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/target_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/target_lang_spinner"
            android:text="@string/target_hint"
            android:layout_marginLeft="8dp"  
            android:layout_above="@id/target_lang_spinner"/>

        <Spinner
            android:id="@+id/target_lang_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/arrow"
            android:layout_toRightOf="@+id/arrow"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/complete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_check"
            android:layout_margin="16dp" />


    </RelativeLayout>
</RelativeLayout>